<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TableRow
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:text="@string/latest_interaction"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/edit_notification_interval"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:text="@string/priority"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/edit_weighted_algo"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:text="@string/birthdate"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/edit_theme"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_save_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:text="@string/edit"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_close_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:text="@string/close"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>